--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -18,41 +18,6 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleURLTypes</key>
-    <array>
-        <!--
-        <dict>
-        ... Some other CFBundleURLTypes definition.
-        </dict>
-        -->
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <!--
-                  Replace "000000000000" with your Facebook App ID here.
-                  **NOTE**: The scheme needs to start with `fb` and then your ID.
-                -->
-                <string>fb1784569751657281</string>
-            </array>
-        </dict>
-    </array>
-
-    <key>FacebookAppID</key>
-
-    <!-- Replace "000000000000" with your Facebook App ID here. -->
-    <string>1784569751657281</string>
-    <key>FacebookDisplayName</key>
-
-    <!-- Replace "YOUR_APP_NAME" with your Facebook App name. -->
-    <string>Yohbite</string>
-
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>fbapi</string>
-        <string>fb-messenger-share-api</string>
-        <string>fbauth2</string>
-        <string>fbshareextension</string>
-    </array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -76,5 +41,28 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    
+    <!-- Facebook Login configuration -->
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb607317820129530</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>607317820129530</string>
+    <key>FacebookDisplayName</key>
+    <string>Login test</string>
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
