--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,7 +55,7 @@
     <key>FacebookAppID</key>
     <string>607317820129530</string>
     <key>FacebookDisplayName</key>
-    <string>Login test</string>
+    <string>Login Bighshop</string>
     
     <key>LSApplicationQueriesSchemes</key>
     <array>
@@ -63,6 +63,7 @@
         <string>fb-messenger-share-api</string>
         <string>fbauth2</string>
         <string>fbshareextension</string>
+        <string>whatsapp</string>
     </array>
 </dict>
 </plist>
