--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,7 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   flutter_screenutil: ^1.1.0
   font_awesome_flutter: ^8.7.0
-  #flutter_launch: ^0.2.0
-  flutter_open_whatsapp: ^0.1.2
+  url_launcher: ^5.4.1
   getflutter: ^1.0.11
   carousel_slider: ^2.0.0
   video_player: ^0.10.9+1
