--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter ecomerce shopping application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,17 +22,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  shared_preferences: ^0.5.3+4
+  cupertino_icons: ^0.1.3
+  shared_preferences: ^0.5.8
   flutter_facebook_login: ^3.0.0
   flutter_screenutil: ^1.1.0
   font_awesome_flutter: ^8.7.0
-  url_launcher: ^5.4.1
+  google_fonts: ^0.3.5
+  url_launcher: ^5.5.0
   getflutter: ^1.0.11
   carousel_slider: ^2.0.0
   video_player: ^0.10.9+1
-  provider: ^3.0.0
-  http: ^0.12.0+4
+  provider: ^4.3.1
+  http: ^0.12.2
   intl: ^0.16.1
   dio: ^3.0.9
 
@@ -61,6 +62,7 @@ flutter:
   assets:
     - images/gro.jpg
     - images/gro.png
+    - images/BigshopLogo.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
