--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   google_fonts: ^0.3.5
   url_launcher: ^5.5.0
   getflutter: ^1.0.11
+  getwidget: ^1.2.4
   carousel_slider: ^2.0.0
   video_player: ^0.10.9+1
   provider: ^4.3.1
